// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders danger styling if provided 1`] = `
<div
  className="c-dialog__header c-dialog__header--danger "
  data-garden-id="modals.header"
  data-garden-version="version"
/>
`;

exports[`Header renders default styling 1`] = `
<div
  className="c-dialog__header "
  data-garden-id="modals.header"
  data-garden-version="version"
/>
`;
